# Tex2Img

./: .gitignore  Cargo.toml  LICENSE  build.rs  test_lib.py
.cargo/: config.toml
.github/: build.yml
.github/workflows/: build.yml
patched/tectonic/crates/bridge_graphite2/: Cargo.toml
patched/tectonic/crates/bridge_harfbuzz/: Cargo.toml
src/: lib.rs  main.rs
tectonic/crates/bridge_harfbuzz/: build.rs
tectonic/crates/xetex_layout/: build.rs
